--- a/poem/纯情恋歌/chunqingliange.html
+++ b/poem/纯情恋歌/chunqingliange.html
@@ -113,17 +113,19 @@
 </div>
 
 <div style="float: right;">
+      <!--google adsense begin-->
 <script type="text/javascript"><!--
-google_ad_client = "ca-pub-9497215369402153";
-/* 右侧1 */
-google_ad_slot = "2212038941";
-google_ad_width = 300;
-google_ad_height = 800;
+google_ad_client = "ca-pub-5009827137558101";
+/* 120 x 600 - Skyscraper aboy.aliapp */
+google_ad_slot = "7205997338";
+google_ad_width = 120;
+google_ad_height = 600;
 //-->
 </script>
 <script type="text/javascript"
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+      <!--google adsense end-->
 </div>
 </body>
 </html>
