--- a/trunk/poem/纯情恋歌/chunqingliange.html
+++ b/trunk/poem/纯情恋歌/chunqingliange.html
@@ -12,7 +12,7 @@
 	jQuery(document).ready(function(){
 			$('#list19poems').accordion({
 			autoHeight: false,
-			event: 'mouseover',
+   // event: 'mouseover',
 			fillSpace: true
 		});
 	});
