--- a/trunk/poem/1 纯情主义诗歌19首/chunqingzhuyi.html
+++ b/trunk/poem/1 纯情主义诗歌19首/chunqingzhuyi.html
@@ -106,7 +106,6 @@ function showPoem(link){
 告诉我
 雨季就要来临
  
-(2001．2)
 #
 
 2   带你去一个地方
@@ -154,7 +153,7 @@ function showPoem(link){
 我们，
 现在就出发吧
  
-(2001．9．1)
+
 #
 
 3   青
@@ -218,7 +217,7 @@ function showPoem(link){
  
 不带灵魂的流浪者
 牵着黑色的尾巴走
-(2000.4.2)
+
 #
 
 5   叩问
@@ -250,7 +249,6 @@ function showPoem(link){
 去平流层上漂流（你掉下去的时候千万别牵着我的衣角）
 我们一起去过云上的日子（第二天，我们只好分享鸟食了）
  
-（2001．8．30）
 #
 
 7   初恋
@@ -276,7 +274,7 @@ function showPoem(link){
  
 这甩甩头也挥不去的年少忧愁……
  
-2001．9．1 PS：后来我才发觉，
+PS：后来我才发觉，
 题目取名“初恋”并不妥，
 我实际上是在写初恋前那种朦胧
 的情思，也是我自己有所体验的。
@@ -295,7 +293,6 @@ function showPoem(link){
 柏拉图(Plato)睁开眼睛
 一群女孩子正在湖边洗澡
  
-（2001．8）
 #
 
 9   岩上的蝶
@@ -307,7 +304,6 @@ function showPoem(link){
 成长不过是逃离母亲设下的温暖的壳
 生活就是从一片叶飞上另一片叶
  
-(2001．8)
 #
 
 10 风到哪里去
@@ -316,7 +312,6 @@ function showPoem(link){
 追风的少年还在痴痴的问
 风 到 哪 里 去
  
-2001．8．31
 #
 
 11 秋天里的童话
@@ -330,7 +325,6 @@ function showPoem(link){
 PS:在收获的季节，我们满怀喜悦又黯然神伤，
 于是把梦中的风景放在无边的希冀里
  
-（2001．9．1）
 #
 
 12 如果云知道
@@ -341,7 +335,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 或者意味着
 打落在模糊信笺上的雨水
  
-(2001．9．1)
 #
 
 13 夜的变奏
@@ -385,7 +378,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 网的缜密
 ……
  
-（2000．4．2）
 #
 
 14 童年里的夏天
@@ -406,7 +398,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 只剩下四处流浪的梦
 和一条伴舞的月亮
  
-（1998．9．3）
 #
 
 15 童年的纸飞机
@@ -427,9 +418,8 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
  
 蓦然回首，在我错过六十四个季节的村庄里
 竟搁满了浅浅深深的脚印
- 
-（1998．9 合肥）
-#
+
+D#
 
 16 我想知道
 
@@ -476,7 +466,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 我想做个朦胧诗人
 泰戈尔、徐志摩、顾城是我的老师
  
-(2001．5）
 #
 
 17 伤心的日子
@@ -491,7 +480,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 你要做巡行在太空里的行星
 你要做一个快乐潇洒的孩子
  
-(2001．9．1)
 #
 
 18 离开你
@@ -516,7 +504,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 我们即将重逢
 陌生的惊喜允许姗姗来迟
  
-(2000.4.2)
 #
 
 19 古老的城堡
@@ -542,7 +529,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 城堡的街道
 随处可见干尸的舞蹈锯骨头的音乐
  
-(2001.9.1)
 #
 
 </textarea>
@@ -562,7 +548,6 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 告诉我
 雨季就要来临
  
-(2001．2)
 
  
 </pre>
