--- a/trunk/poem/3 雨夜的星辉/Starlight-in-the-Rainy-Night.html
+++ b/trunk/poem/3 雨夜的星辉/Starlight-in-the-Rainy-Night.html
@@ -5,49 +5,11 @@
 <title>雨夜的星辉</title>
 </head>
 <BODY bgcolor=#000000>
-<pre style="color:#FFF">Album3 雨夜的星辉  - 阿蒙诗歌习作第3辑
+<pre style="color:#FFF">3 雨夜的星辉  
 ---------------------------------------------------
+1*
 
-1*黑夜从此不再醒来
-
-是谁的眼睛
-将黑暗拾取
-沉默不发一声
-夜色匆匆上路了
-在来去的坦途上
-没有就算肤浅的脚印
-这是温柔极致的上演
-温存得手心也幻想融化
-柔和到一致忽略稍逊的路灯
-
-我希望黑夜在今夜开始从此不再醒来
-我的前方是没有终止的诱惑
-我——一个不发光的夜游体
-一直被夜色包围
-步履轻随
-在黑暗中无休止的流浪
-
-就这样，
-我会淡忘我的意识——
-在岁月的洪流里
-我收获了空惘
-而时光收获了全部
-
-黑夜，
-在今夜开始从此不再醒来
-搁浅吧，明天的太阳
-
-
-
-2*短诗
-
-短的诗
-就像正四面体
-坚固 精致 玲珑
-倾诉着我的心情
-不必付出冗长的代价
-
-
+2*
 
 3*清晨的鸟鸣
 
@@ -75,53 +37,9 @@
 让阳光直透心脏
 歌声里画眉鸟飞向远方
 
+5*
 
-
-5*欢乐英雄
-
-夜色温柔似水
-走在小河边稻田旁的小路上
-蛙声此伏彼扬
-仿佛在合唱一首奏鸣曲
-
-我想变成一只夜鸟
-与蛙们约定
-谁将芦苇做成了短笛
-谁就是欢乐的英雄
-可当我走上前去
-它们却屏住了呼吸
-我服输了
-你是夜晚真正的欢乐英雄
-就凭一冬的蛰伏和那小小的气囊
-
-
-6*热情的季候风
-
-盛夏的季候风
-发布了一个消息——
-天鹅和莫拉克将携手来你们的城市
-绿叶先会演唱他们写的一首歌
-密云用一场盛大的时装表演来开幕
-请准备游戏、雨伞和糖果
-
-季候风你们为什么来这里？
-
-天鹅有一个理由——
-陆地上住着许多天真的女孩
-去过小小的海底世界
-她们说更想去看真的大海
-莫拉克会带给她们许多礼物
-不仅仅关于海……
-
-季候风的礼物有什么？
-
-季候风不理睬人们的脾气
-带给我们惊恐和凉爽的夏日
-季候风破解海上的密码
-包装大陆需要的雨水
-季候风探测人世的温度
-变幻多情莫测的面孔
-…… 
+6*
 
 
 7*时间与河流
@@ -131,15 +49,6 @@
 粼粼波光里
 倒映着天空天真的笑容
 
-当陨石变成海的沙粒
-当种子长成岸边的船舟
-远山起伏了多少次的苍翠
-流水带走了几多年轻的梦
-
-河外的湖泊
-水域退成砖楼
-就连她的名字
-也浸染了烟火
 
 
 8*写在夜幕上的话 
@@ -202,34 +111,30 @@
 在榕树下读到了一个题目——少年的悲伤电影，觉得特好，就以这个题目写了几个电影镜头
 
 1
-眸子里载满年少的清辉
+眸子里满载年少的清辉
 泄露满不在乎的情怀
 我想拽住她的衣角
 小心的问
 老师布置的课堂作文是什么题目
-今天放学你能不能在校门口的小吃店里等我
 
 2
 你的出现
 是我梦的起点
 开学典礼上的发言
 让我初尝了一下我的衣角的咸味
-我在构思一个爱的宣言
+我在构思一个爱的赠言
 等下一个雨天
 
 3
 滴滴达达的三月小雨天
 同学都头顶一把小伞
 两两三三
-奔向食堂——学校里最被遗忘的前线
+奔向食堂——学校里最被遗忘的一线
 我淋在雨中 点起脚尖
 却找不到校服上熟悉的发线
 
 4
-放学后一起吃泡泡糖
-因为我觉得
-我们这个年纪的爱情
-真的好像一颗泡泡糖
+放学后一起去吹泡泡糖
 
 
 11*邂逅
@@ -245,7 +150,7 @@
 
 白蝴蝶飞走了
 像极了那迎向走过时来不及闪避的女孩
-同穿T恤衣擦肩而过
+同穿T恤衣擦臂而过
 一点点心颤一点点忧伤
 好久，我想起回头
 消失了 蝴蝶女孩
@@ -319,12 +224,7 @@
 未来很遥远
 
 
-15*4℃爱情
-
-我的爱情开始变温
-刚好4℃
-上面是厚厚的冰层
-我躲在4℃的温暖里做甜蜜的梦
+15*
 
 
 16*袭韵诗之一 太潦草的哭泣
