--- a/poem/纯情恋歌/chunqingliange.html
+++ b/poem/纯情恋歌/chunqingliange.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>纯情恋歌 阿蒙诗歌习作第4辑</title>
+<title>纯情恋歌 </title>
 <link type="text/css" rel="stylesheet" href="css/accordion.css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 </script>
@@ -21,9 +21,9 @@
 
 <body>
 <header>
-  <p style="font-style:italic; border:1px orange thin">纯情恋歌 - 阿蒙诗歌习作第4辑</p>
+  <p style="font-style:italic; border:1px orange thin">纯情恋歌 </p>
 </header>
-<div class="basic" style="float:left; margin-left: 2em; background-color:#ddd" id="list19poems"> <a>1 无尽的尽头</a>
+<div class="basic" style="float:left; margin-left: 2em; background-color:#ddd" id="list19poems"> <a>无尽的尽头</a>
   <div>
     <pre> 
 世界的尽头，是海是冰川
@@ -51,7 +51,7 @@
 去世界之无尽的尽头
  </pre>
   </div>
-  <a>2 漂在蓝色夜幕上</a>
+ 
   <div>
     <pre>
 
@@ -64,7 +64,7 @@
   </div>
 
 
-  <a>4 奔跑的风滚草</a>
+  <a>奔跑的风滚草</a>
   <div>
     <pre>
 
@@ -80,26 +80,9 @@
   </div>
 
 
-  <a>6 飞出你的城堡</a>
-  <div>
-    <pre>
-你我赖以骄傲的大学
-是彼此不曾熟悉的城堡
-你所寄以生存的宿舍
-是我不可抵达的地牢
-你所穿越的网络
-是我无法覆盖的战壕
 
-啦——啦啦
-快飞出你的城堡
-放开你的爱恋
-在自由的星座里
-我们一起相拥
-诉说着青春流年
-</pre>
-  </div>
 
-  <a>7 </a>
+  <a>。。。 </a>
   <div>
     <pre>
 ......
