--- a/trunk/poem/4 天真的寻找/天真的寻找.html
+++ b/trunk/poem/4 天真的寻找/天真的寻找.html
@@ -9,13 +9,13 @@
  <title>
   Untitled
  </title>
- <link href="HTMLFiles/Y)wv„[ûb~.css" rel="stylesheet" type="text/css" />
+ <link href="HTMLFiles/Y)wvÂ„[Ã»b~.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
 <p class="Text">
- <span style='color: #00FF00;'>&#22825;&#30495;&#30340;&#23547;&#25214;</span> ---- &#38463;&#33945;&#35799;&#27468;&#20064;&#20316;&#31532;<span style='color: #FF0000;'>4</span>&#36753;
+ <span style='color: #00FF00;'>&#22825;&#30495;&#30340;&#23547;&#25214;</span> 
 </p>
 
 
@@ -35,90 +35,6 @@
 <p class="Text">
  
 </p>
-
-
-
-<p class="Input">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_1.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_1.gif" width="215" height="16" style="vertical-align:middle" />
-</p>
-
-<p class="Text">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_2.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_2.gif" width="4" height="15" style="vertical-align:middle" />
-</p>
-
-<p class="Text">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_3.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_3.gif" width="360" height="230" style="vertical-align:middle" />
-</p>
-
-<p class="Section">
- 2 &#22825;&#30495;&#30340;&#23547;&#25214;
-</p>
-
-
-
-<p class="Text">
- <span><span><img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_4.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_4.gif" width="360" height="420" style="vertical-align:middle" /></span></span>
-</p>
-
-
-
-<p class="Section">
- 3 &#33258;&#28982;&#24120;&#25968;e&#30693;&#36947;&#25551;&#30011;&#33258;&#36523;
-</p>
-
-
-
-<p class="Input">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_5.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_5.gif" width="275" height="16" style="vertical-align:middle" />
-</p>
-
-<p class="Input">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_6.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_6.gif" width="360" height="298" style="vertical-align:middle" />
-</p>
-
-<p class="Section">
- 4 &#26524;&#20013;&#30340;&#27882;&#28404;
-</p>
-
-
-
-<p class="Input">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_7.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_7.gif" width="330" height="16" style="vertical-align:middle" />
-</p>
-
-<p class="Text">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_8.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_8.gif" width="360" height="361" style="vertical-align:middle" />
-</p>
-
-<p class="Text">
- &#30427;&#22799;&#30340;&#26524;&#23454;<br />&#29645;&#34255;&#30528;&#22825;&#31354;&#30340;&#27882;&#28404;<br />&#37027;&#26159;&#19982;&#29983;&#20465;&#26469;&#30340;&#35868;&#24213;<br />&#21482;&#20026;&#30196;&#24773;&#30340;&#20154;&#32780;&#24320;&#21551;<br /><br />&#24076;&#26395;&#22312;&#20320;&#21160;&#24773;&#30340;&#37027;&#19968;&#21051;&#30456;&#36935;<br />&#19968;&#26522;&#26524;&#23454;&#19981;&#20165;&#20165;&#33021;&#20026;&#20320;&#20805;&#39269;<br />&#24403;&#27882;&#28404;&#25955;&#33853;&#22823;&#22320;<br />&#20302;&#22836;&#30340;&#20320; &#26159;&#21542;&#30475;&#28165;<br />&#29233;&#21487;&#29992;&#19968;&#29983;&#21435;&#23547;&#35269;
-</p>
-
-
-
-<p class="Section">
- 5 &#29233;&#30340;&#20256;&#36882;<br />
-</p>
-
-
-
-<p class="Section">
- 6 &#19971;&#24425;&#30340;&#38376;&#24088;
-</p>
-
-
-
-<p class="Section">
- 7 &#36153;&#39532;&#22823;&#23450;&#29702;&#21644;&#19968;&#26869;&#23567;&#33609;
-</p>
-
-
-
-<p class="Input">
- <img src="HTMLFiles/&#22825;&#30495;&#30340;&#23547;&#25214;_9.gif" alt="&#22825;&#30495;&#30340;&#23547;&#25214;_9.gif" width="239" height="372" style="vertical-align:middle" />
-</p>
-
-
 
 
 <div style="font-family:Helvetica; font-size:11px; width:100%; border:1px none #999999; border-top-style:solid; padding-top:2px; margin-top:20px;">
