--- a/poem/4 天真的寻找/天真的寻找.html
+++ b/poem/4 天真的寻找/天真的寻找.html
@@ -9,9 +9,8 @@
  <title>
   Untitled
  </title>
- <link href="HTMLFiles/Y)wv„[ûb~.css" rel="stylesheet" type="text/css" />
+ <link href="HTMLFiles/Y)wvï¿½[ï¿½b~.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
 
 <p class="Text">
