--- a/trunk/poem/3 雨夜的星辉/Starlight-in-the-Rainy-Night.html
+++ b/trunk/poem/3 雨夜的星辉/Starlight-in-the-Rainy-Night.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>雨夜的星辉</title>
 </head>
-<BODY bgcolor=#000>
+<body bgcolor=#000>
 <pre style="color:#FFF">Album3 雨夜的星辉  - 阿蒙诗歌习作第3辑
 ---------------------------------------------------
 
