--- a/trunk/poem/雨夜的星辉/Starlight-in-the-Rainy-Night.html
+++ b/trunk/poem/雨夜的星辉/Starlight-in-the-Rainy-Night.html
@@ -150,8 +150,8 @@
 
 19*无题 
 
-光和夜霸占了整个空间 
-我只好俯下身子，紧贴草地 
+光和影霸占了整个空间 
+我只好匍匐在大地，紧贴草地 
 天空覆盖着我 
 季候风覆盖着我 
 九头鸟在我头顶傲然耸立 
@@ -171,6 +171,7 @@
 另一只鸟飞翔在云霄里 
 纵歌
 </pre>
+
 <script language="JavaScript">
 <!--
 var no = 60;           
