--- a/poem/雨夜的星辉/Starlight-in-the-Rainy-Night.html
+++ b/poem/雨夜的星辉/Starlight-in-the-Rainy-Night.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 <title>雨夜的星辉</title>
 </head>
-<BODY bgcolor=#000000>
-<pre style="color:#FFF">雨夜的星辉  - 阿蒙诗歌习作
----------------------------------------------------
+<BODY bgcolor="#001020">
+<pre>雨夜的星辉  - 阿蒙诗歌习作第3辑
+--------
 
 1*黑夜从此不再醒来
+2011-05-15
 
 是谁的眼睛
 将黑暗拾取
@@ -20,27 +22,27 @@
 温存得手心也幻想融化
 柔和到一致忽略稍逊的路灯
 
-我希望黑夜在今夜开始从此不再醒来
+希望黑夜在今夜开始从此不再醒来
 我的前方是没有终止的诱惑
 我——一个不发光的夜游体
 一直被夜色包围
 步履轻随
 在黑暗中无休止的流浪
 
-就这样，
+就这样
 我会淡忘我的意识——
 在岁月的洪流里
 我收获了空惘
-而时光收获了全部
+而时光收获全部
 
 黑夜，
 在今夜开始从此不再醒来
 搁浅吧，明天的太阳
 
-2011-05-15
 
 
 2*短诗
+2011-06-05
 
 短的诗
 就像正四面体
@@ -48,10 +50,11 @@
 倾诉着我的心情
 不必付出冗长的代价
 
-2011-06-05
+
 
 
 3*清晨的鸟鸣
+2011-06-05
 
 清晨的鸟鸣
 将我唤醒
@@ -63,10 +66,10 @@
 想起来了
 许多朋友在一起的时候
 我就是一只黎明前的鸟
-2011-06-05
 
 
 4*共享
+2011-06-05
 
 在我停留的每个世界角落
 都留下了片片凋零的忧伤
@@ -77,26 +80,6 @@
 白云上放上链接
 让阳光直透心脏
 歌声里画眉鸟飞向远方
-
-2011-06-05
-
-
-5*欢乐英雄
-
-夜色温柔似水
-走在小河边稻田旁的小路上
-蛙声此伏彼扬
-仿佛在合唱一首奏鸣曲
-
-我想变成一只夜鸟
-与蛙们约定
-谁将芦苇做成了短笛
-谁就是欢乐的英雄
-可当我走上前去
-它们却屏住了呼吸
-我服输了
-你是夜晚真正的欢乐英雄
-就凭一冬的蛰伏和那小小的气囊
 
 
 6*热情的季候风
@@ -131,18 +114,9 @@
 
 7*时间与河流
 
-在流淌的河流中
-有时间老人苍凉的声音
-粼粼波光里
-倒映着天空天真的笑容
+在流淌的河流中 有时间老人苍凉的声音
+粼粼波光里 倒映着天空天真的笑容
 
-当陨石变成海的沙粒
-当种子长成岸边的船舟
-远山起伏了多少次的苍翠
-流水带走了几多年轻的梦
-
-河外的湖泊
-水域退成砖楼
 
 
 ……
@@ -173,9 +147,9 @@
 </pre>
 
 <script language="JavaScript">
-<!--
+
 var no = 60;           
-var speed = 2;         
+var speed = 4;         
 var s, x, y, sn, cs;
 var a, r, cx, cy;
 var i, doc_width = 800, doc_height = 600;
@@ -230,7 +204,7 @@ document.all["dot"+i].style.pixelLeft = x[i];
 setTimeout("raindrop()", speed);                     
 }
 raindrop();
--->
+
 </script>
 </BODY>
 </html>
