defer 因为google.search.SearchControl()几年前就不再可用

--- a/1 纯情主义诗歌19首/chunqingzhuyi.html
+++ b/1 纯情主义诗歌19首/chunqingzhuyi.html
@@ -13,8 +13,8 @@ div#searchcontrol{float:right}
 a:hover{color:#99FF00}
 </style>
     <script src="http://www.google.com/jsapi"
-        type="text/javascript"></script>
-    <script language="Javascript" type="text/javascript">
+        type="text/javascript" defer></script>
+    <script language="Javascript" type="text/javascript" defer>
     //<![CDATA[
     google.load('search', '1');
 	  
