--- a/5 星沙梦泪/StarSandDreamTears.html
+++ b/5 星沙梦泪/StarSandDreamTears.html
@@ -7,7 +7,7 @@
     <title>星沙梦泪</title>
 </head>
 <body>
-    <textarea name="" id="" cols="30" rows="10">
+<textarea name="" id="" cols="50" rows="30">
 星沙梦泪 - 阿蒙诗歌习作第5辑
 
 我创造或提炼出的成语：
@@ -19,8 +19,7 @@
 
 
 2 浪沫迩来
-   希腊神话故事书中说爱与美的女神乘着海上的浪花泡沫飘然绮丽而来，是双鱼星座的守护神。我最崇拜的女神就是爱情女神，
-美丽浪漫的形象让我发自内心里拟造出【浪沫迩来】这一隽永又崭新的成语
+   希腊神话故事书中说爱与美的女神乘着海上的浪花泡沫飘然绮丽而来，是双鱼星座的守护神。
 
 
 3 陨石海沙
@@ -146,9 +145,37 @@ http://a-boy.tk/volcano/0%E8%AF%97%E6%AD%8C%E4%B9%A0%E4%BD%9C/%E9%9D%A2%E5%90%91
  -- --
  由【九月流火】启发，我把【四月飞鸟】当成一个成语，它们都涵隐了地理与气候
 
-17 
-18
-19
-    </textarea>
+
+17 驿桥漫客
+	非常怀念在桥驿镇的那几天流浪生活，2016的夏天，在那条青草河边……
+	我喜欢这样的浪漫，喜欢那里的乡村气息……
+    也可作【驿桥浪客】
+
+
+18 白鹤费马
+白鹤猜想:（by Cody Luo cody@ustc.edu 2019-11-08） n>=3，对于任意的两个互质正整数a,b,gcd(a,b)==1, 考察a^n+b^n的互不相同的质因数的乘积，product(prime_factors(a^n+b^n))总是远远大于(a+b),无一例外. 
+并且通常的情况是 (a^n+b^n)的最大质因数大于(a+b)/3, prime_factors(a^n+b^n)[-1] > (a+b)/3, oftenly(but not always)
+
+当考虑到Fermat大定理时，因为 n>=3,a^n+b^n<(a+b)^n , 可以不妨设定 1024<a<a+7<b<b+2<c<a+b, gcd(a,b)==1 , (a+b)%2==1, 并且c是合数
+如果你能证明(a^n+b^n)的总有两个质因数乘积要大于(a+b)，那么如果还有a^n+b^n=c^n的话, 就会出现（p1*p2)^n<=(a^n+b^n)<(a+b)^n 这个矛盾！
+
+这里蕴含的数学证明思想我称之为 白鹤原理(WhiteCrane Principle)
+
+Fermat's Last Theorem一直被当作超级难题悬挂几个世纪，然而白鹤猜想一出，迷惑涣然冰释! 【白鹤费马】
+
+
+19 火星留年
+太阳系不断的膨胀，火星与地球离太阳的距离越来越远了……火星开始变得冷酷，不太适合人类生存，而地球温度气候变化正慢慢温和，呈现出类似火星史前文明的繁荣迹象。其实早在火星留年之前的几万年或更早，科学家便预言地球会出现人文生态，以后的几万或几千年里，我们的先祖——在火星上生存繁息了无数个世纪的火星人，开始策划行动进行火地人类迁徙……
+这次恢弘的人类文明迁徙才是真正的地球人类起源。也许那个时纪正是恐龙惊慌的侏罗纪后期，原始森林、海洋鱼类和陆地爬行动物，正是无法取代的资源……
+火星留年之前的最后3000年里，科技文明就远远超过了现在地球上的模样，具有大型星际飞行器……
+当地球出现两栖动物青蛙，在火星上生存的古老神族，也就是我们的先祖，决定开始进行全面的大迁徙……
+这可能是恐龙灭绝的真正原因。
+如果我们追问起人类的最初起源，据我估测，火星留年与人类文明的火星元年至少相隔20万年。也许是这个20万年之前的若干亿年前，从系外传来一种神秘生体，经过海王星或天王星的载托，最后在火星水域里蕴育成了生命的最初形态……
+
+火星留年又过去无数个纪元了。现在，我们的故园，那时的一切，还有当初执意留下来的我们的胞系，都被火星岩浆拥抱翻滚，成为火星表面光滑的热干巴
+可以期望重返火星的那一天，采用更大的时间分度来看，太阳系会像一个气球一样涨大又收拢些，也许多少多少时间之后，火星又会向太阳靠拢，那是我们的故园，也是我们赖以生存的下一个理想环境……
+许多过去只有神往，无可追溯……
+就是回到火星留年，我也不能完成一部完整的有你想象的火星神话！
+</textarea>
 </body>
 </html>
