麻雀数雨 幻世迷城

--- a/5 星沙梦泪/StarSandDreamTears.html
+++ b/5 星沙梦泪/StarSandDreamTears.html
@@ -55,7 +55,7 @@
 
 
 5 望城南雀
-想象中有一只在城市之南观望的麻雀，它……
+想象中有一只在城市之南观望的鸟雀，它……
 
 注: 星沙、望城都是长沙的区级地名。
 在长沙生活久了，特别喜欢长沙的河流与中学，
@@ -71,18 +71,21 @@ xi xia xian xiang 夕下仙乡
 
 
 7 茕蚀萦莽
+泛指思绪里那些缥缈虚幻又萦绕侵蚀的东西
 
 
-8 
+8 麻雀数雨
+连绵的雨天里，麻雀们深居简出，在枝头数着雨滴过日子。
+比喻无所作为的混日子
+
 
 9 面向大海编程
 面向大海编程  
 http://a-boy.tk/volcano/0%E8%AF%97%E6%AD%8C%E4%B9%A0%E4%BD%9C/%E9%9D%A2%E5%90%91%E5%A4%A7%E6%B5%B7%E7%BC%96%E7%A8%8B.htm
 
 
-10 大数据小代码
-大数据小代码 Big data, Tiny Code 是开源电子期刊项目 https://github.com/2293/tinycode  的广告语。
- 《Tiny Code》电子期刊，又名《火星人学习报》  
+10 幻世迷城
+虚幻的世界和充满迷惑的城市 
 
 
 11 赚钱泡妞
