--- a/4 飞翔的海沙/FlyingSeasand.html
+++ b/4 飞翔的海沙/FlyingSeasand.html
@@ -19,7 +19,7 @@
 		<section id="accordion">
 			<div>
 				<input type="radio" name="accordion-group" id="option-1" />
-				<label for="option-1"><a>1 无尽的尽头</a></label>
+				<label for="option-1"><a>1 世界的尽头</a></label>
 				<article>
 					<pre>
     2011-12-06
