摔倒了会有一声震撼

--- a/1 纯情主义诗歌19首/chunqingzhuyi.html
+++ b/1 纯情主义诗歌19首/chunqingzhuyi.html
@@ -412,7 +412,7 @@ PS:在收获的季节，我们满怀喜悦又黯然神伤，
 大海说
                退潮了会有一滩贝壳
 浪花说
-               摔到了会有一声震撼
+               摔倒了会有一声震撼
 流星说
                陨落了会有一瞬辉煌
  
